--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python-dotenv==1.0.0
-datasets==2.14.5
-transformers==4.36.0
-accelerate==0.22.0
-peft==0.5.0
-bitsandbytes==0.41.1
-evaluate
+python-dotenv==1.0.1
+torch==2.4.1
+datasets==3.1.0
+transformers==4.46.1
+accelerate==1.0.1
+peft==0.13.2
+bitsandbytes==0.44.1
 unidiff==0.7.5
-torch
+tensorboardX==2.6.2.2
